--- a/.github/workflows/weekly-digest.yml
+++ b/.github/workflows/weekly-digest.yml
@@ -2,7 +2,7 @@ name: Weekly Digest
 
 on:
   schedule:
-    - cron: "0 7 * * *" # Daily 07:00 UTC
+    - cron: "0 7 * * 1" # Mondays 07:00 UTC
   workflow_dispatch: {}
 
 permissions:
